--- a/.gitignore
+++ b/.gitignore
@@ -396,3 +396,5 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+/BreweryInventory/BreweryInventoryEFClasses/mySqlSettings.json
+/BreweryInventory/BreweryInventoryEFClasses/mySqlSettings.json
